    Aziz OUATTARA!
  * apport/crashdb_impl/launchpad.py: In third-party mode, report bugs
    against Launchpad projects. Thanks to Oumar
    Aziz OUATTARA for his branch! (LP: #213454)
  * bin/apportcheckresume: Include /var/lib/pm-utils/stress.log, too.
    Thanks to Andy Whitcroft for the initial patch, rewrote to use
    apport.hookutils.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 26 Jan 2009 12:41:12 +0100

apport (0.128) jaunty; urgency=low

  * apport/ui.py: Introduce new configuration option "thirdparty" and
    ignore the is_distro_package() check if it is set to true.
  * bin/apport-retrace: Call Cache.open() after Cache.update().
  * bin/apport-retrace: If downloading a report fails (e. g. the
    description was invalidly modified), mark the bug as invalid with
    a proper explanation instead of crashing, unless we are in
    "stdout" or "output file" mode.
  * apport/crashdb_impl/launchpad.py: Apply some heuristics to attempt
    recovering broken descriptions as in LP #315728 (intermediate
    blank lines, and non-apport data append).

 -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 19 Jan 2009 17:49:55 +0100

apport (0.127) jaunty; urgency=low

  * bin/apportcheckresume, debian/apport.init: integrate with pm-utils to
    detect suspend/resume failures.  Thanks to Steve Conklin and Andy
    Whitcroft.  LP: #316419.

 -- Steve Langasek <steve.langasek@ubuntu.com>  Tue, 13 Jan 2009 12:54:12 -0800

apport (0.126) jaunty; urgency=low

  * bin/apport-chroot: If --auth is specified in "login" mode, symlink
    the file into /tmp/auth in the fakechroot. This makes it much
    easier to interactively debug retracing.
  * bin/apport-retrace: Exit with zero for bugs which do not have a
    core dump, so that it does not completely stop the retracers.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 09 Jan 2009 22:49:48 +0100

apport (0.125) jaunty; urgency=low

  * bin/apport-chroot: Exit with apport-retraces' exit status, to