@@ -20,8 +20,12 @@ apport (0.129) UNRELEASED; urgency=low
   * bin/apportcheckresume: Include /var/lib/pm-utils/stress.log, too.
     Thanks to Andy Whitcroft for the initial patch, rewrote to use
     apport.hookutils.
+  * apport/crashdb.py, init_duplicate_db(): Run an integrity check and
+    raise exception if it fails, to avoid running the retracers on a
+    corrupt duplicate db. Add test case to
+    apport/crashdb_impl/memory.py.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 26 Jan 2009 12:41:12 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 26 Jan 2009 13:26:55 +0100
 
 apport (0.128) jaunty; urgency=low
 
